<resources>
    <string name="app_name">Parstagram</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="description">description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="image_to_be_posted">image to be posted</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagram_logo">instagram logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
</resources>