<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_like"
        android:icon="@drawable/like_selector"
        android:title="Like"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/posts_feed_selector"
        android:title="@string/compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/setting_selector"
        android:title="Setting"
        app:showAsAction="always" />
</menu>