<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etNewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instagramLogo2"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewUserName"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/instagramLogo2"
        android:layout_width="241dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/instagram_logo"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewPassword"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up" />
</RelativeLayout>